kube-cluster/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: dsc-frontend
        image: aliaoco/dsc-frontend:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        command:
        - python3
        args:
        - frontend.py
        ports:
        - containerPort: 5000
