kube-cluster/frontend/logs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs
spec:
  selector:
    matchLabels:
      app: logs
  replicas: 1
  template:
    metadata:
      labels:
        app: logs
    spec:
      containers:
      - name: python-logs
        image: aliaoco/dsc-logs:latest
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
